--- a/aboutmobile.css
+++ b/aboutmobile.css
@@ -48,7 +48,7 @@
 
   .footer-head hr {
     width: 50px;
-    margin-left: 43%;
+    margin-left: 46%;
     margin-top: 5px;
     background-color: #ec5242;
     border-color: #ec5242;
